# opengl_cherno

./: .gitignore  CMakeLists.txt  README.md  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
res/shaders/: basic.shader
